# ecs-task-doctor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ecs_doctor/: __init__.py  cli.py  diagnose.py  models.py
src/ecs_doctor/checks/: __init__.py  iam.py  image.py  logs.py  networking.py  resources.py  service_events.py  task_status.py
src/ecs_doctor/formatters/: __init__.py  console.py  json_fmt.py  markdown.py
src/ecs_doctor/utils/: aws.py
tests/: conftest.py  test_cli.py  test_diagnose.py  test_formatters.py
tests/test_checks/: test_iam.py  test_image.py  test_logs.py  test_networking.py  test_resources.py  test_service_events.py  test_task_status.py
