[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecs-task-doctor"
version = "0.1.0"
description = "Diagnose why your ECS tasks fail to start or keep crashing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ECS Task Doctor Contributors" },
]
keywords = ["aws", "ecs", "docker", "devops", "diagnosis", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.28",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "moto[ecs,ec2,iam,logs,ecr]>=5.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "boto3-stubs[ecs,ec2,iam,logs,ecr]",
]

[project.scripts]
ecs-doctor = "ecs_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/rishi1508/ecs-task-doctor"
Repository = "https://github.com/rishi1508/ecs-task-doctor"
Issues = "https://github.com/rishi1508/ecs-task-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ecs_doctor"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
